2002-04-19  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/diskfile.c: Improve message for missing features.

2002-04-19  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	Add many features.
	* common-src/amfeatures.c (am_set_default_feature_set): New function
	  to set the default features set.
	* common-src/amfeatures.h (am_set_default_feature_set): Prototype.
	* common-src/amfeatures.h: Rename amanda_feature_auth_keyword to
	  fe_options_auth.
	* client-src/client_util.c: Check features.
	* server-src/amcheck.c: Ditto.
	* server-src/diskfile.c: Ditto.
	* server-src/driverio.c: Ditto.
	* server-src/planner.c: Ditto.
	* server-src/diskfile.h (optionstr): Change prototype.
	* client-src/sendsize.c: Fix compiler warning.

2002-04-17  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* common-src/amfeatures.c: Renamed from features.c
	* common-src/amfeatures.h: Renamed from features.h
	* common-src/Makefile.am: Rename features to amfeatures.
	* client-src/amandad.c: Ditto.
	* client-src/client_util.h: Ditto.
	* client-src/selfcheck.c: Ditto.
	* client-src/sendbackup.c: Ditto.
	* client-src/sendsize.c: Ditto.
	* server-src/amcheck.c: Ditto.
	* server-src/diskfile.h: Ditto.
	* server-src/dumper.c: Ditto.
	* server-src/planner.c: Ditto.
	* server-src/taper.c: Ditto.

2002-04-14  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/conffile.c: Default dumporder set to "ttt".
	* server-src/driver.c: If dumporder is too short, use t and T.
	* man/amanda.8.in: Default dumporder set to "ttt".

2002-04-13  John R. Jackson (jrj@purdue.edu)

	* common-src/features.c: Add amanda_feature_auth_keyword feature so
	  authorization in the OPTIONS string is backward compatible.
	* common-src/features.h: Ditto.
	* client-src/client_util.c: Ditto.
	* client-src/client_util.h: Ditto.
	* client-src/selfcheck.c: Ditto.
	* client-src/sendbackup.c: Ditto.
	* client-src/sendsize.c: Ditto.
	* server-src/diskfile.c: Ditto.
