@@ -24,7 +24,7 @@
  * file named AUTHORS, in the root directory of this distribution.
  */
 /* 
- * $Id: sendsize.c,v 1.97.2.13.4.6.2.14 2002/04/19 14:24:29 martinea Exp $
+ * $Id: sendsize.c,v 1.97.2.13.4.6.2.15 2002/04/20 01:59:04 martinea Exp $
  *
  * send estimated backup sizes using dump
  */
@@ -88,13 +88,11 @@ typedef struct disk_estimates_s {
 
 disk_estimates_t *est_list;
 
-#define MAXMAXDUMPS 16
-
 char *host;				/* my hostname from the server */
 
 static am_feature_t *our_features = NULL;
 static char *our_feature_string = NULL;
-static am_feature_t *their_features = NULL;
+static g_option_t *g_options = NULL;
 
 /* local functions */
 int main P((int argc, char **argv));
@@ -112,14 +110,14 @@ int main(argc, argv)
 int argc;
 char **argv;
 {
-    int level, new_maxdumps, spindle;
+    int level, spindle;
     char *prog, *disk, *amdevice, *dumpdate;
     option_t *options = NULL;
     disk_estimates_t *est;
     disk_estimates_t *est1;
     disk_estimates_t *est_prev;
     char *line = NULL;
-    char *s, *fp;
+    char *s;
     int ch;
     char *err_extra = NULL;
     int fd;
@@ -127,7 +125,6 @@ char **argv;
     unsigned long malloc_hist_2, malloc_size_2;
     int done;
     int need_wait;
-    int maxdumps = 1;
     int dumpsrunning;
 
 
@@ -171,49 +168,14 @@ char **argv;
 #define sc "OPTIONS "
 	if(strncmp(line, sc, sizeof(sc)-1) == 0) {
 #undef sc
-
-#define sc "features="
-	    s = strstr(line, sc);
-	    if(s != NULL) {
-		s += sizeof(sc)-1;
-#undef sc
-		am_release_feature_set(their_features);
-		if((their_features = am_string_to_feature(s)) == NULL) {
-		    err_extra = "bad features value";
-		    goto err;
-		}
-	    }
-
-#define sc "maxdumps="
-	    s = strstr(line, sc);
-	    if(s != NULL) {
-		s += sizeof(sc)-1;
-#undef sc
-		if(sscanf(s, "%d;", &new_maxdumps) != 1) {
-		    err_extra = "bad maxdumps value";
-		    goto err;
-		}
-		if (new_maxdumps > MAXMAXDUMPS) {
-		    maxdumps = MAXMAXDUMPS;
-		} else if (new_maxdumps > 0) {
-		    maxdumps = new_maxdumps;
-		}
-	    }
-
-#define sc "hostname="
-	    s = strstr(line, sc);
-	    if(s != NULL) {
-		s += sizeof(sc)-1;
-		ch = *s++;
-#undef sc
-		fp = s-1;
-		while(ch != '\0' && ch != ';') ch = *s++;
-		s[-1] = '\0';
-		host = newstralloc(host, fp);
+	    g_options = parse_g_options(line+8, 1);
+	    if(g_options->hostname) {
+		amfree(host);
+		host = g_options->hostname;
 	    }
 
 	    printf("OPTIONS features=%s;maxdumps=%d;hostname=%s;\n",
-		   our_feature_string, maxdumps, host);
+		   our_feature_string, g_options->maxdumps, host);
 	    fflush(stdout);
 	    continue;
 	}
@@ -286,7 +248,7 @@ char **argv;
 		    options = parse_options(s + 8,
 					    disk,
 					    amdevice,
-					    their_features,
+					    g_options->features,
 					    0);
 		}
 		else {
@@ -376,7 +338,7 @@ char **argv;
 	 * If we are already running the maximum number of children
 	 * go back and wait until one of them finishes.
 	 */
-	if(dumpsrunning >= maxdumps) {
+	if(dumpsrunning >= g_options->maxdumps) {
 	    done = 0;
 	    need_wait = 1;
 	    continue;				/* have to wait first */
@@ -443,8 +405,9 @@ char **argv;
     amfree(our_feature_string);
     am_release_feature_set(our_features);
     our_features = NULL;
-    am_release_feature_set(their_features);
-    their_features = NULL;
+    am_release_feature_set(g_options->features);
+    amfree(g_options->str);
+    amfree(g_options);
 
     malloc_size_2 = malloc_inuse(&malloc_hist_2);
 
